<resources>

    <string name="app_name">Go4lunch</string>
    <string name="app_divise">Find a nice restaurant and invite your co-workers for lunch!</string>

    <string name="facebook_app_id">399525961109440</string>
    <string name="fb_login_protocol_scheme">fb399525961109440</string>


    <string name="title_activity_g4_lunch_main">G4LunchMain</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="perms_are_denied">Sory dude but the app is bassed on google maps so if you don\'t allow the location this don\'t have sence to use it</string>

    <string name="title_activity_btom_nav">MainActivity</string>

    <string name="place_ApiKey">AIzaSyB5pdCHz3tknrs61cl8jCWlNDQ5_oQLAsU</string>

    <string name="search">Search</string>
    <string name="your_lunch">Your lunch</string>
    <string name="action_settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="map_view">map view</string>
    <string name="list_view">list view</string>
    <string name="worckmates">workmates</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="like">LIKE</string>
    <string name="call">CALL</string>
    <string name="website">WEBSITE</string>
    <string name="isOpen">it\'s open, and wait for you</string>
    <string name="isClose">it\'s close for now</string>
    <string name="text_mesege">text mesege</string>
    <string name="chat">CHAT</string>
    <string name="unknow_information">unknow information</string>
    <string name="hasnt_decided">hasn\'t decidet yet</string>
    <string name="is_eating">\"is eating \"</string>


</resources>