<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/maps">

    <fragment
        android:id="@+id/maps"
        android:name="com.mickdevil.go4lunch.UI.botoomNavStaf.map.MapFragment"
        android:label="@string/map_view"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/mapListV"
        android:name="com.mickdevil.go4lunch.UI.botoomNavStaf.ListView.ListView"
        android:label="@string/list_view"
        tools:layout="@layout/fragment_list_view" />

    <fragment
        android:id="@+id/workmates"
        android:name="com.mickdevil.go4lunch.UI.botoomNavStaf.WorkMates.Workmates"
        android:label="@string/worckmates"
        tools:layout="@layout/activity_pager" />

</navigation>