<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.PlaceDetailsActivity">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
       android:id="@+id/goToThePlace"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="275dp"
      android:backgroundTint="@color/white"
        android:src="@drawable/ic_search_24"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/placeDetailImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
android:scaleType="centerCrop"

        />

    <androidx.cardview.widget.CardView
        android:id="@+id/placeInfoHolder"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/placeDetailImage"
        app:cardBackgroundColor="@color/mainAppColor">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="17dp"
                android:text="BILLY HERINGTON DUNGON"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/placeActionHolder"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/placeInfoHolder"
        app:cardBackgroundColor="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/callResto"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="65dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/phone_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/callResto"
                android:layout_alignParentStart="true"
                android:layout_marginStart="60dp"
                android:layout_marginTop="10dp"
                android:text="@string/call"
                android:textColor="@color/mainAppColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/LikeResto"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:src="@drawable/like_the_place" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/callResto"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/like"
                android:textColor="@color/mainAppColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/webSiteResto"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="65dp"
                android:src="@drawable/place_web_site_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/callResto"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:text="@string/website"
                android:textColor="@color/mainAppColor"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/placeDetailsRCV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/placeActionHolder" />


</RelativeLayout>
</RelativeLayout>